--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .header {
   background-color: #2563eb;
   padding: 1rem 2rem;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -17,9 +19,16 @@
 
 .logo a {
   color: white;
-  font-weight: 700;
-  font-size: 1.5rem;
+  font-weight: 1500;
+  font-size: 1.8rem;
   text-decoration: none;
+  font-family: "Lilita One", sans-serif;
+  transition: transform 0.3s ease;
+  display: inline-block; /* necessário para aplicar transform corretamente */
+}
+
+.logo a:hover {
+  transform: scale(1.1); /* aumenta 10% */
 }
 
 .nav-links {
@@ -29,9 +38,10 @@
 
 .nav-links li a {
   color: white;
-  font-weight: 600;
+  font-weight: 700;
   padding: 0.5rem 0;
   transition: color 0.3s ease;
+  font-family: 'Poppins', sans-serif;
 }
 
 .nav-links li a:hover,
