--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
-  background-color: #ebeff3;
+  background-color: #dee1e4;
   color: #1f2937;
   line-height: 1.6;
   overflow-x: hidden;
