--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,5 +1,5 @@
 .footer-section {
-  background-color: #2563eb;
+  background-color: #05318f;
   color: white;
   padding: 2rem 1rem;
   margin-top: 4rem;
@@ -46,7 +46,7 @@
 }
 
 .footer-links ul li a:hover {
-  color: #facc15;
+  color: rgb(245, 210, 10);
 }
 
 .social-links {
@@ -62,6 +62,7 @@
   color: #d1d5db;
 }
 
+/* Rodapé reorganizado para visualização vertical em telas pequenas */
 @media (max-width: 768px) {
   .footer-container {
     flex-direction: column;
